--- a/css/styles.css
+++ b/css/styles.css
@@ -821,6 +821,8 @@ text-align: center;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline:none;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-field-textarea:focus{
