--- a/css/styles.css
+++ b/css/styles.css
@@ -852,7 +852,7 @@ text-align: center;
   background-position: right .7rem top 50%, 0 0;
   background-size: .65rem auto, 100%;
   
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='16px' height='16px' viewBox='0 0 16 16' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' preserveAspectRatio='xMidYMid'%3e%3cg%3e%3cpolygon points='0,0 16,0 8,16' fill='blue'/%3e%3c/g%3e%3c/svg%3e");
+  background-image: url('/images/iconcheck.svg');
 }
 
 .form-field-icon{
