--- a/css/styles.css
+++ b/css/styles.css
@@ -664,7 +664,9 @@ color:var(--primary-white);
 }
 
 .subscription-label{
-  text-size:14px;
+  margin-top:12px;
+  font-weight: 700;
+  font-size:14px;
   line-height: 1.14;
   text-transform: uppercase;
   color: #FFFFFF;
@@ -742,14 +744,17 @@ color:var(--primary-white);
   left:50%;
   transform: translate(-50%, -50%);
   background-color: var(--primary-white);
- width:528px;
+  width:100%;
+ max-width:528px;
  height:100%;
-  height:581px;
+  max-height:581px;
+  border-radius:4px;
+  box-shadow: 0px 4px 4px 0px #00000040;
+
   transition-property: visibility;
   transition-duration:250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  overflow-y: auto;
-
+  /*overflow-y: auto;*/
 }
 
 .modal-headline{
@@ -772,6 +777,12 @@ text-align: center;
   fill:#000000;
 }
 
+.icon-close:hover,
+.icon-close:focus{
+  fill:var(--accent-color);
+  cursor: pointer;
+}
+
 .btn-close{
   position:absolute;
    top:8px; 
@@ -791,9 +802,12 @@ text-align: center;
 /* Form */
 
 .form-field-label{
-  display:block;
-  margin-bottom:4px;
-  color: inherit;
+font-size: 12px;
+line-height:1.16;
+letter-spacing: 1%;
+
+display:block;
+margin-bottom:4px;
 }
 
 .form-field-input{
@@ -820,6 +834,7 @@ text-align: center;
   padding:12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  resize: none;
   outline:none;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -829,14 +844,20 @@ text-align: center;
   border-color: var(--accent-color);
 }
 
-.form-field-textarea:placeholder{
-  font-size:12px;
-  line-height:1.16;
+.form-field-textarea::placeholder{
+font-size: 12px;
+font-weight: 400;
+line-height: 1.17;
+letter-spacing: 0.01em;
+text-align: left;
+color:rgba(117, 117, 117, 0.5);
+
+ 
 }
 
 .form-field{
   position:relative;
-  margin-bottom: 28px;
+  margin-bottom: 10px;
 }
 .checkbox{
   margin-bottom: 30px; 
@@ -855,6 +876,12 @@ text-align: center;
   background-image: url('/images/iconcheck.svg');
 }
 
+
+.input:checked{
+  background-image: url(/img/iconcheck.svg);
+    box-shadow: 0 0 0 3px hotpink;
+}
+
 .form-field-icon{
   position: absolute;
   top:50%;
@@ -864,8 +891,17 @@ text-align: center;
 
 .form-submit{
   display:block;
-  margin: 0 auto;
-  
+  margin: 0 auto; 
   }
+
+.point{
+font-size: 14px;
+line-height: 1.71;
+  }
+
+.accent{
+ color:var(--accent-color);
+}
+
 
 
