--- a/css/styles.css
+++ b/css/styles.css
@@ -877,9 +877,9 @@ color:rgba(117, 117, 117, 0.5);
 }
 
 
-.input:checked{
+input:checked{
   background-image: url(/img/iconcheck.svg);
-    box-shadow: 0 0 0 3px hotpink;
+
 }
 
 .form-field-icon{
