--- a/css/styles.css
+++ b/css/styles.css
@@ -733,7 +733,12 @@ color:var(--primary-white);
   width:100%;
   height:100%;
   background-color:rgba(0, 0, 0, 0.2);
+
+  transition-property: visibility;
+  transition-duration:250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal{
   padding-top:40px;
   padding-bottom:40px;
