--- a/css/styles.css
+++ b/css/styles.css
@@ -863,9 +863,6 @@ color:rgba(117, 117, 117, 0.5);
   position:relative;
   margin-bottom: 10px;
 }
-.checkbox{
-  margin-bottom: 30px; 
-}
 
 .form-field-icon{
   position: absolute;
@@ -879,13 +876,11 @@ color:rgba(117, 117, 117, 0.5);
   margin: 0 auto; 
   }
 
-.point{
-font-size: 14px;
-line-height: 1.71;
-  }
 
 .accent{
  color:var(--accent-color);
+ display: inline-block;
+ margin-left:5px;
 }
 
 .hidden{
@@ -895,17 +890,26 @@ line-height: 1.71;
   outline: none;
 }
 
-.checkbox-icon{
-  display:inline-block;
+
+.policy-text{
+  display:flex;
   align-items: center;
 
+font-size: 14px;
+line-height: 1.71;
+margin-bottom:30px;
+font-style: normal;
+font-weight: 400;
+color: #757575;
+}
+
+.checkbox-icon{
   width:16px;
   height:15px;
-  border-radius: 2px;
 
+  border-radius: 2px;
   margin-right:7px;
-  
-   border: 2px solid var(--headline-color);
+    border: 2px solid var(--headline-color);
    transition: transform 250ms var(--timing-function), fill 250ms var(--timing-function);
 }
 
